--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+layout: null
+---
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -217,6 +220,9 @@
       background: var(--surface); border: 1px solid var(--border);
       border-radius: 16px; padding: 24px;
       transition: all 0.4s var(--ease); position: relative; overflow: hidden;
+      height: 100%; /* Ensure uniform height in grids */
+      display: flex;
+      flex-direction: column;
     }
     .card:hover {
       border-color: var(--accent-cyan); transform: translateY(-5px);
@@ -288,6 +294,7 @@
       <nav class="nav-links-desktop flex gap-2">
         <a href="#about" class="nav-link data-hover">About</a>
         <a href="#work" class="nav-link data-hover">Work</a>
+        <a href="#blog" class="nav-link data-hover">Blog</a>
         <a href="#stack" class="nav-link data-hover">Skill Stack</a>
         <a href="#contact" class="nav-link data-hover">Contact</a>
       </nav>
@@ -369,7 +376,7 @@
               <h3 class="font-heading" style="font-size: 24px;">JamrockAI</h3>
               <div class="tag">TikTok / AI</div>
             </div>
-            <p style="color: var(--text-muted); margin-bottom: 24px;">
+            <p style="color: var(--text-muted); margin-bottom: 24px; flex-grow: 1;">
               Automated content brand. Jamaican culture meets AI visuals and storytelling.
             </p>
             <div class="flex gap-4">
@@ -382,7 +389,7 @@
               <h3 class="font-heading" style="font-size: 24px;">n8n Workflows</h3>
               <div class="tag">Systems</div>
             </div>
-            <p style="color: var(--text-muted); margin-bottom: 24px;">
+            <p style="color: var(--text-muted); margin-bottom: 24px; flex-grow: 1;">
               Custom pipelines: Google Drive → Title Generation → YouTube Upload.
             </p>
             <div class="flex gap-4">
@@ -395,7 +402,7 @@
               <h3 class="font-heading" style="font-size: 24px;">When Wi Hungry</h3>
               <div class="tag">Reviews</div>
             </div>
-            <p style="color: var(--text-muted); margin-bottom: 24px;">
+            <p style="color: var(--text-muted); margin-bottom: 24px; flex-grow: 1;">
               Food review storytelling. Clean editing, pacing, and honesty.
             </p>
             <div class="flex gap-4">
@@ -408,7 +415,7 @@
               <h3 class="font-heading" style="font-size: 24px;">Jamaica Basketball</h3>
               <div class="tag">Community</div>
             </div>
-            <p style="color: var(--text-muted); margin-bottom: 24px;">
+            <p style="color: var(--text-muted); margin-bottom: 24px; flex-grow: 1;">
               Sports media coverage. Highlights, player stats, and leadership.
             </p>
             <div class="flex gap-4">
@@ -416,6 +423,38 @@
             </div>
           </a>
         </div>
+      </div>
+    </section>
+
+    <section id="blog">
+      <div class="container">
+        <div class="flex justify-between items-center" style="margin-bottom: 40px;">
+          <h2 class="reveal">Latest Insights</h2>
+          <span class="reveal" style="color: var(--text-muted);">From the Lab</span>
+        </div>
+
+        <div class="grid-3">
+          {% for post in site.posts limit:3 %}
+          <a href="{{ post.url | relative_url }}" class="card reveal data-hover">
+            <div class="flex justify-between items-center" style="margin-bottom: 16px;">
+              <h3 class="font-heading" style="font-size: 20px; line-height: 1.4;">{{ post.title }}</h3>
+            </div>
+            
+            <p style="color: var(--text-muted); font-size: 14px; margin-bottom: 24px; flex-grow: 1;">
+              {{ post.excerpt | strip_html | truncatewords: 20 }}
+            </p>
+
+            <div class="flex justify-between items-center" style="font-size: 12px; color: var(--text-muted);">
+              <span class="tag" style="color:var(--accent-cyan)">Read Article &rarr;</span>
+              <span>{{ post.date | date: "%b %d, %Y" }}</span>
+            </div>
+          </a>
+          {% endfor %}
+        </div>
+        
+        {% if site.posts.size == 0 %}
+        <p class="reveal" style="color: var(--text-muted);">No journal entries found. Check back soon.</p>
+        {% endif %}
       </div>
     </section>
 
