--- a/index.html
+++ b/index.html
@@ -436,6 +436,12 @@ layout: null
         <div class="grid-3">
           {% for post in site.posts limit:3 %}
           <a href="{{ post.url | relative_url }}" class="card reveal data-hover">
+            
+            {% if post.image and post.image != "" %}
+            <div style="width: 100%; height: 200px; margin-bottom: 16px; border-radius: 8px; overflow: hidden; background: #111;">
+              <img src="{{ post.image }}" alt="{{ post.title }}" style="width: 100%; height: 100%; object-fit: cover;">
+            </div>
+            {% endif %}
             <div class="flex justify-between items-center" style="margin-bottom: 16px;">
               <h3 class="font-heading" style="font-size: 20px; line-height: 1.4;">{{ post.title }}</h3>
             </div>
