--- a/index.html
+++ b/index.html
@@ -371,6 +371,33 @@ layout: null
         </div>
 
         <div class="grid-2">
+          
+          <a href="https://www.farikaatkins.online" target="_blank" class="card reveal data-hover">
+            <div class="flex justify-between items-center" style="margin-bottom: 16px;">
+              <h3 class="font-heading" style="font-size: 24px;">Farika Atkins</h3>
+              <div class="tag">Education / Portfolio</div>
+            </div>
+            <p style="color: var(--text-muted); margin-bottom: 24px; flex-grow: 1;">
+              Professional academic portfolio. "Royal Educator" branding for a Department Head & Creative Strategist.
+            </p>
+            <div class="flex gap-4">
+              <span class="tag" style="color:var(--accent-cyan)">Visit Site &rarr;</span>
+            </div>
+          </a>
+
+          <a href="https://masterbryankukibo.online" target="_blank" class="card reveal data-hover">
+            <div class="flex justify-between items-center" style="margin-bottom: 16px;">
+              <h3 class="font-heading" style="font-size: 24px;">Master Bryan Kukibo</h3>
+              <div class="tag">Martial Arts / Web</div>
+            </div>
+            <p style="color: var(--text-muted); margin-bottom: 24px; flex-grow: 1;">
+              Digital dojo for Grandmaster Bryan Campbell. Modernizing martial arts heritage with a clean web presence.
+            </p>
+            <div class="flex gap-4">
+              <span class="tag" style="color:var(--accent-cyan)">Visit Site &rarr;</span>
+            </div>
+          </a>
+
           <a href="https://www.tiktok.com/@jamrockai" target="_blank" class="card reveal data-hover" style="transition-delay: 100ms;">
             <div class="flex justify-between items-center" style="margin-bottom: 16px;">
               <h3 class="font-heading" style="font-size: 24px;">JamrockAI</h3>
