--- a/index.html
+++ b/index.html
@@ -373,6 +373,8 @@ layout: null
         <div class="grid-2">
           
           <a href="https://www.farikaatkins.online" target="_blank" class="card reveal data-hover">
+            <div style="position: absolute; top: 0; right: 0; background: var(--accent-amber); color: #000; font-size: 10px; font-weight: 800; padding: 6px 12px; border-bottom-left-radius: 12px; z-index: 10;">★ CLIENT BUILD</div>
+            
             <div class="flex justify-between items-center" style="margin-bottom: 16px;">
               <h3 class="font-heading" style="font-size: 24px;">Farika Atkins</h3>
               <div class="tag">Education / Portfolio</div>
@@ -381,11 +383,13 @@ layout: null
               Professional academic portfolio. "Royal Educator" branding for a Department Head & Creative Strategist.
             </p>
             <div class="flex gap-4">
-              <span class="tag" style="color:var(--accent-cyan)">Visit Site &rarr;</span>
+              <span class="tag" style="color:var(--accent-amber); border-color:var(--accent-amber)">Visit Site &rarr;</span>
             </div>
           </a>
 
           <a href="https://masterbryankukibo.online" target="_blank" class="card reveal data-hover">
+            <div style="position: absolute; top: 0; right: 0; background: var(--accent-amber); color: #000; font-size: 10px; font-weight: 800; padding: 6px 12px; border-bottom-left-radius: 12px; z-index: 10;">★ CLIENT BUILD</div>
+
             <div class="flex justify-between items-center" style="margin-bottom: 16px;">
               <h3 class="font-heading" style="font-size: 24px;">Master Bryan Kukibo</h3>
               <div class="tag">Martial Arts / Web</div>
@@ -394,7 +398,7 @@ layout: null
               Digital dojo for Grandmaster Bryan Campbell. Modernizing martial arts heritage with a clean web presence.
             </p>
             <div class="flex gap-4">
-              <span class="tag" style="color:var(--accent-cyan)">Visit Site &rarr;</span>
+              <span class="tag" style="color:var(--accent-amber); border-color:var(--accent-amber)">Visit Site &rarr;</span>
             </div>
           </a>
 
